2002-09-04  Theodore A. Roth  <troth@verinet.com>

	* doc/TODO: Add what needs to be doxumented still.

2002-09-04  Theodore A. Roth  <troth@verinet.com>

	* configure.in(AM_INIT_AUTOMAKE): Bump version.
	* doc/TODO: Add note about __ prefix of args in dox.
	* include/setjmp.h: Add dox comments.

2002-09-03  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* doc/api/Makefile.am: implement --enable-versioned-doc
	* configure.in: implement --enable-versioned-doc

2002-09-02  Theodore A. Roth  <troth@verinet.com>

	* configure.in(AM_INIT_AUTOMAKE): Bump version.
	* NEWS: Note mega69 as new supported device.
	* doc/api/main_page.dox: Add list of supported devices.

2002-08-31  Marek Michalkiewicz  <marekm@amelek.gda.pl>

	* configure.in (AM_INIT_AUTOMAKE): Update version.
	(AVR_CRT_MEGA): Add crtm169.o.
	* include/avr/iom169.h: New file.
	* include/avr/iom323.h: Fix typo (SIG_INTERRUPT3 -> 2).

2002-08-30  Theodore A. Roth  <troth@verinet.com>

	* doc/api/inline_asm.dox: Remove _PC_ from dox. It doesn't seem to
		be available to the user.

2002-08-30  Theodore A. Roth  <troth@verinet.com>

	* doc/TODO: Updated.
	* doc/api/faq.dox: Remove C example for .init1; refer to sections dox.
	* doc/api/sections.dox: Remove faq_startup ref.
		Add note about -Wl,-Tdata,<addr>.
		Add explanation of ',"ax",@progbits'.

2002-08-30  Theodore A. Roth  <troth@verinet.com>

	* configure.in(AM_INIT_AUTOMAKE): Bump version.
	* doc/api/Makefile.am: Add sections.dox.
	* doc/api/sections.dox: New file.

2002-08-29  Theodore A. Roth  <troth@verinet.com>

	* doc/api/faq.dox: Move asm faq to faq dox.
	* doc/api/inline_asm.dox: Move asm faq to faq dox.
	* configure.in(AM_INIT_AUTOMAKE): Bump version.

2002-08-29  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* doc/api/faq.dox: 16-bit timer IO registers and interrupts.
	* doc/api/sfr.dox: xref to the FAQ.

2002-08-28  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* doc/api/faq.dox: Mention C++ support.

2002-08-28  Joerg Wunsch <j.gnu@uriah.heep.sax.de>
