@@ -1,3 +1,7 @@
+2002-09-06  Joerg Wunsch <j.gnu@uriah.heep.sax.de>
+
+	* libm/fplib/dtostre.S: fix numerous bugs and nits.
+
 2002-09-04  Theodore A. Roth  <troth@verinet.com>
 
 	* doc/TODO: Add what needs to be doxumented still.
